[package]
name = "glued"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.38", features = ["full"] }
iroh = "0.29"
iroh-gossip = "0.29"
hickory-server = "0.24"
hickory-resolver = { version = "0.24", features = ["tokio"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"
bollard = "0.17"
anyhow = "1.0"
figment = { version = "0.10", features = ["env", "toml", "json"] }
futures-util = "0.3"
hex = "0.4.3"

[profile.release]
lto = true
codegen-units = 1
strip = true
